1.4.2 - TBD

* Added rendering for Minecraft 1.11 blocks:
    * Observer Block
    * Shulker Box
* Added scene settings export/import system.
* It is now possible to temporarily change the view target via the
  render preview context menu. This is useful for autofocus and moving
  entities.
* Updated command block rendering to be compatible with Minecraft 1.9+.
* Added scale setting for player entities.
* Improved error checking for resource packs.

1.4.1 - 2016-10-22

* Fixed scenes not able to be saved after fresh install, caused
  by the scene directory not yet being created.
* Added "Face target" button in the Entities tab.
* Fixed bugs in the command-line interface.
* Expanded plugin API.

1.4.0 - 2016-09-23

* Chunky now requires Java 8 update 40, or a later version.
* Added rendering for Minecraft 1.10 blocks:
    * Bone Block
    * Magma Block
    * Red Nether Brick
    * Nether Wart Block
* Modernized the Chunky User Interface by rewriting it in JavaFX.
* Most of the UI remains similar to the old version, but some parts
  were redesigned:
    * Controls for multiple cameras have been simplified.
    * The Highlight tab has been merged into the Options tab.
    * The gradient editor and color pickers were slightly redesigned.
    * Added some sky gradient presets.
    * Removed the fullscreen option for the preview window.
* Removed old features that were not well supported. The goal is to
  make these into separate plugins:
    * Removed the benchmark tool.
    * Removed the experimental OpenCL renderer.
* Holding Control while moving the camera multiplies move distance by 100.
* The render preview scaling option has been moved into a context menu.
  Right clicking the render preview window brings up the scaling menu.
* Added option to show guide grid in the render preview. The option is
  accessed through the right-click context menu.
* Pressing Space in the render preview window starts/pauses/resumes rendering.