@@ -25,6 +25,7 @@ import javafx.scene.control.CheckBox;
 import javafx.scene.control.Label;
 import javafx.scene.control.ScrollPane;
 import javafx.scene.control.TextField;
+import javafx.scene.image.Image;
 import javafx.scene.input.KeyCode;
 import javafx.scene.input.KeyEvent;
 import javafx.scene.layout.HBox;
@@ -153,6 +154,7 @@ class SettingsExport extends Stage {
     scrollPane.setContent(vBox);
     setScene(new Scene(scrollPane));
     setTitle("Settings Export");
+    getIcons().add(new Image(getClass().getResourceAsStream("/chunky-icon.png")));
     addEventFilter(KeyEvent.KEY_PRESSED, e -> {
       if (e.getCode() == KeyCode.ESCAPE) {
         e.consume();
