@@ -51,6 +51,7 @@ public class Icon extends Texture {
   public static final Icon isoSW = new Icon("iso-sw");
   public static final Icon isoES = new Icon("iso-es");
   public static final Icon wrench = new Icon("wrench");
+  public static final Icon pencil = new Icon("pencil");
   public static final Icon map = new Icon("map");
   public static final Icon mapSelected = new Icon("map-selected");
   public static final Icon disk = new Icon("disk");
